tests/control/if_non_bool_condition.esl
// error: If statement's condition must be a bool

func main() {
    if (1) {
        print("2137");
    }
}
